Unaligned Navbar #3094 hoping that its been solved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -565,8 +565,8 @@ body {
 /* --------- Profile Icon -------- */
 .action {
   position: absolute;
-  left: 1440px; 
-  top: 15px; 
+  left: 1434px;
+  top: 12px;
 }
 
 .action .profile {
@@ -3541,7 +3541,7 @@ footer {
   padding: 0 5px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: background-color 0.5s ease;
-  left: 250px; /* Adjust to move it to the right */
+  left: 240px; /* Adjust to move it to the right */
 }
 
 .switch-label .sun-icon,
